--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ jobs:
 
     before_install:
       - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
+      - sudo ./install-and-configure-Mongo.sh
+      - sudo ./install-and-configure-RabbitMQ.sh
 
     install: true
 
