trying mongo and rabbitmq services

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,9 @@ jobs:
       - $HOME/.m2
 
     before_script:
-      - sleep 15
-      - mongo dsh --eval 'db.createUser({user:"dshuser",pwd:"dsh01!",roles:[ "readWrite"]})'
+      - sleep 30
+      - mongo status
+      - mongo --host localhost --eval 'db.createUser({user:"dshuser",pwd:"dsh01!",roles:[ "readWrite"]})' dsh
 
     script:
       - ./build-ci.sh
