--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
     before_script:
       - sleep 60
       - cat /etc/mongod.conf
-      - mongo --host localhost status
+      - service mongod status
       - mongo --host localhost --eval 'db.createUser({user:"dshuser",pwd:"dsh01!",roles:[ "readWrite"]})' dsh
 
     script:
