trying mongo and rabbitmq services

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,8 @@ jobs:
       - $HOME/.m2
 
     before_script:
-      - sleep 60
-      - cat /etc/mongod.conf
-      - service mongod status
-      - mongo --host localhost --eval 'db.createUser({user:"dshuser",pwd:"dsh01!",roles:[ "readWrite"]})' dsh
+      - sleep 15
+      - ./install-and-configure-Mongo.sh
 
     script:
       - ./build-ci.sh
