--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
 
   include:
 
-    if: branch = master OR branch =~ /\d*-(.*)$/
+    if: branch = DEVELOP OR branch =~ /\d*-(.*)$/
 
     before_install:
       - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
