--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,14 @@ services:
   - mongodb
   - rabbitmq
 
+env:
+
+  global:
+    - BUILD_FLOW=build
+
 jobs:
 
   include:
-
-    if: branch = DEVELOP OR branch =~ /\d*-(.*)$/
 
     before_install:
       - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
@@ -27,6 +30,11 @@ jobs:
       - sleep 15
       - ./install-and-configure-Mongo.sh
 
+    stage: "build"
+
+stages:
+  - name: "build"
+    if: env(BUILD_FLOW) = build AND ( branch = DEVELOP OR branch =~ /\d*-(.*)$/ )
     script:
       - ./build-ci.sh
 
