--- a/.travis.yml
+++ b/.travis.yml
@@ -13,27 +13,28 @@ env:
   global:
     - BUILD_FLOW=build
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
+
+install: true
+
+cache:
+  directories:
+  - $HOME/.m2
+
+before_script:
+  - sleep 15
+  - ./install-and-configure-Mongo.sh
+
 jobs:
 
   include:
 
-    before_install:
-      - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
-
-    install: true
-
-    cache:
-      directories:
-      - $HOME/.m2
-
-    before_script:
-      - sleep 15
-      - ./install-and-configure-Mongo.sh
-
-    stage: "build"
+    - stage: "build"
+      script:
+      - ./build-ci.sh
 
 stages:
   - name: "build"
-    script:
-      - ./build-ci.sh
+    if: env(BUILD_FLOW) = build AND ( branch = DEVELOP OR branch =~ /\d*-(.*)$/ )
 
