--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 env:
 
   global:
-    - BUILD_FLOW=build
+    - BUILD_FLOW=d
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
@@ -36,5 +36,5 @@ jobs:
 
 stages:
   - name: "build"
-    if: env(BUILD_FLOW) = build
+    if: env(BUILD_FLOW) = d AND (branch = DEVELOP OR branch =~ /\d*-(.*)$/)
 
