--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ services:
 env:
 
   global:
-    - BUILD_FLOW=build
+    - BUILD_FLOW=stage
+    - NEXT_DEV_VERSION=0.3.0-SNAPSHOT
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
@@ -34,3 +35,18 @@ jobs:
       if: env(BUILD_FLOW) = build AND (branch = DEVELOP OR branch =~ /\d*-(.*)$/)
       script:
       - ./build-ci.sh
+
+    - stage: "stage"
+      if: env(BUILD_FLOW) = stage
+      script:
+      - ./build-ci-stage.sh
+
+    - stage: "staging"
+      if: env(BUILD_FLOW) = staging
+      script:
+      - ./build-ci-staging.sh
+
+    - stage: "release"
+      if: env(BUILD_FLOW) = release
+      script:
+      - ./build-ci-release.sh
