--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   global:
     - BUILD_FLOW=staging
     - NEXT_DEV_VERSION=0.3.0-SNAPSHOT
+    - BRANCH_TO_RELEASE=origin/staging-0.2.0-SNAPSHOT-RC
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_93df4cdfe2d3_key -iv $encrypted_93df4cdfe2d3_iv -in maven/settings.xml.enc -out settings.xml -d
@@ -47,6 +48,6 @@ jobs:
       - ./build-ci-staging.sh
 
     - stage: "release"
-      if: env(BUILD_FLOW) = release
+      if: env(BUILD_FLOW) = release AND BRANCH = DEVELOP
       script:
       - ./build-ci-release.sh
