--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 env:
 
   global:
-    - BUILD_FLOW=staging
+    - BUILD_FLOW=release
     - NEXT_DEV_VERSION=0.3.0-SNAPSHOT
     - BRANCH_TO_RELEASE=origin/staging-0.2.0-SNAPSHOT-RC
 
