--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
 env:
 
   global:
-    - BUILD_FLOW=build
+    - BUILD_FLOW=stage
     - NEXT_DEV_VERSION=0.2.2-SNAPSHOT
     - BRANCH_TO_RELEASE=origin/staging-0.2.1-SNAPSHOT-RC
 
