--- a/DSH-Coverage-Report/pom.xml
+++ b/DSH-Coverage-Report/pom.xml
@@ -187,7 +187,7 @@
                         <executions>
                             <execution>
                                 <id>commit-badges</id>
-                                <phase>process-resources</phase>
+                                <phase>verify</phase>
                                 <goals>
                                     <goal>checkin</goal>
                                 </goals>
