start staging for 0.2.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ services:
 env:
 
   global:
-    - BUILD_FLOW=build
-    - NEXT_DEV_VERSION=0.2.2-SNAPSHOT
+    - BUILD_FLOW=stage
+    - NEXT_DEV_VERSION=0.3.0-SNAPSHOT
     - BRANCH_TO_RELEASE=origin/staging-0.2.1-SNAPSHOT-RC
 
 before_install:
