--- a/DSH-Coverage-Report/pom.xml
+++ b/DSH-Coverage-Report/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>dsh</artifactId>
         <groupId>com.mriss.products</groupId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.2.3-SNAPSHOT</version>
     </parent>
 
     <!-- The section order in all POMs follow the suggestion in this link: http://maven.apache.org/pom.html#Quick_Overview -->
@@ -14,7 +14,7 @@
     <!-- THE BASICS -->
     <groupId>com.mriss.products.dsh</groupId>
     <artifactId>DSH-Coverage-Report</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
@@ -102,7 +102,7 @@
                 <executions>
                     <execution>
                         <id>report-code-coverage</id>
-                        <phase>verify</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>report-aggregate</goal>
                         </goals>
@@ -166,7 +166,7 @@
                         <executions>
                             <execution>
                                 <id>generate-jacoco-badge</id>
-                                <phase>verify</phase>
+                                <phase>process-resources</phase>
                                 <goals>
                                     <goal>badge</goal> 
                                 </goals>
@@ -186,7 +186,7 @@
                         <executions>
                             <execution>
                                 <id>commit-badges</id>
-                                <phase>verify</phase>
+                                <phase>process-resources</phase>
                                 <goals>
                                     <goal>checkin</goal>
                                 </goals>
