--- a/DSH-Coverage-Report/pom.xml
+++ b/DSH-Coverage-Report/pom.xml
@@ -102,7 +102,7 @@
                 <executions>
                     <execution>
                         <id>report-code-coverage</id>
-                        <phase>process-resources</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report-aggregate</goal>
                         </goals>
