--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
                     <releaseProfiles>product-release-deployment</releaseProfiles>
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                     <preparationGoals>clean install</preparationGoals>
+                    <goals>deploy</goals>
                     <scmCommentPrefix>[maven-release-plugin][skip travis]</scmCommentPrefix>
                 </configuration>
             </plugin>
