--- a/DSH-SOLR/SOLR-terms-vector-order/pom.xml
+++ b/DSH-SOLR/SOLR-terms-vector-order/pom.xml
@@ -18,6 +18,12 @@
 	<artifactId>SOLR-terms-vector-order</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-core</artifactId>
+		</dependency>
+	</dependencies>
 	<!-- <dependencyManagement>...</dependencyManagement> -->
 	<!-- <modules>...</modules> -->
 	<properties>
