--- a/DSH-SOLR/pom.xml
+++ b/DSH-SOLR/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +20,15 @@
 	<packaging>pom</packaging>
 	<!-- <dependencies> -->
 	<!-- </dependencies> -->
-	<!-- <dependencyManagement>...</dependencyManagement> -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.solr</groupId>
+				<artifactId>solr-core</artifactId>
+				<version>${solr.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<!-- <modules>...</modules> -->
 	<properties>
 		<skin.version>1.6</skin.version>
@@ -27,6 +37,8 @@
 		<logo.image>images/logo.jpg</logo.image>
 
 		<jenkins.view>${project.parent.artifactId}</jenkins.view>
+		
+		<solr.version>8.3.1</solr.version>
 	</properties>
 
 	<!-- BUILD SETTINGS -->
