--- a/DSH-SOLR/pom.xml
+++ b/DSH-SOLR/pom.xml
@@ -18,8 +18,12 @@
 	<artifactId>DSH-SOLR</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<!-- <dependencies> -->
-	<!-- </dependencies> -->
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -37,7 +41,7 @@
 		<logo.image>images/logo.jpg</logo.image>
 
 		<jenkins.view>${project.parent.artifactId}</jenkins.view>
-		
+
 		<solr.version>8.3.1</solr.version>
 	</properties>
 
