--- a/DSH-SOLR/pom.xml
+++ b/DSH-SOLR/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -30,6 +34,12 @@
 				<groupId>org.apache.solr</groupId>
 				<artifactId>solr-core</artifactId>
 				<version>${solr.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>${mockito.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -43,6 +53,7 @@
 		<jenkins.view>${project.parent.artifactId}</jenkins.view>
 
 		<solr.version>8.3.1</solr.version>
+		<mockito.version>3.2.4</mockito.version>
 	</properties>
 
 	<!-- BUILD SETTINGS -->
