advanced number filter ready to inherit from FilteringTokenFilter

--- a/DSH-SOLR/SOLR-advanced-numbers-filter/pom.xml
+++ b/DSH-SOLR/SOLR-advanced-numbers-filter/pom.xml
@@ -24,7 +24,7 @@
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
         </dependency>
-    </dependencies>s
+    </dependencies>
     <!-- <dependencyManagement>...</dependencyManagement> -->
     <!-- <modules>...</modules> -->
     <properties>
